spacing fixed corrections made

--- a/public_html/assets/css/index.css
+++ b/public_html/assets/css/index.css
@@ -34,7 +34,7 @@ ol {
   font-size: 25px;
 }
 
-.parts {
+ol {
   float: right;
   margin-right: 30%;
   margin-top: 100px;
@@ -49,7 +49,7 @@ h1 {
 .leftbox {
   width: 50%;
   text-indent: 50px;
-  margin-top: 100px;
+  margin-top: 150px;
 }
 
 img {
